# rss-pipeline

./: .env.example  .gitignore  RSS_PIPELINE_HANDOFF.md  feeds.opml  pyproject.toml  rss_to_supabase.py  schema.sql
.github/workflows/: rss-collect.yml
