[project]
name = "rss-pipeline"
version = "0.1.0"
description = "Macro/investment RSS feed pipeline to Supabase"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "supabase>=2.28.3",
    "trafilatura>=2.0.0",
]
